test/log/conversion/vtrunc_w_i32.txt
vtrunc_w_i32.c:9:2: warning: multi-line comment [-Wcomment]
    9 |  //#define data_init_bool(a, b, n, threshold) \
      |  ^
vtrunc_w_i32.c:11:44: warning: backslash and newline separated by space
   11 |  #define data_init_scalar(a, b, threshold) \
      |                                             
vtrunc_w_i32.c:30:6: warning: no previous prototype for 'vtrunc_w_i32_golden' [-Wmissing-prototypes]
   30 | void vtrunc_w_i32_golden(int64_t a[2][8],uint32_t *b,int32_t *exp_result) {
      |      ^~~~~~~~~~~~~~~~~~~
vtrunc_w_i32.c: In function 'vtrunc_w_i32_golden':
vtrunc_w_i32.c:31:1: error: unknown type name 'Operator'
   31 | Operator Line --- TODO
      | ^~~~~~~~
vtrunc_w_i32.c:31:15: error: expected '=', ',', ';', 'asm' or '__attribute__' before '--' token
   31 | Operator Line --- TODO
      |               ^~
vtrunc_w_i32.c:35:5: warning: 'main' is normally a non-static function [-Wmain]
   35 | int main(void) {
      |     ^~~~
vtrunc_w_i32.c: In function 'main':
vtrunc_w_i32.c:37:17: warning: declaration of 'a' shadows a parameter [-Wshadow]
   37 |     int64x8x2_t a;
      |                 ^
vtrunc_w_i32.c:30:34: note: shadowed declaration is here
   30 | void vtrunc_w_i32_golden(int64_t a[2][8],uint32_t *b,int32_t *exp_result) {
      |                          ~~~~~~~~^~~~~~~
vtrunc_w_i32.c:38:17: warning: declaration of 'b' shadows a parameter [-Wshadow]
   38 |     uint32x16_t b;
      |                 ^
vtrunc_w_i32.c:30:52: note: shadowed declaration is here
   30 | void vtrunc_w_i32_golden(int64_t a[2][8],uint32_t *b,int32_t *exp_result) {
      |                                          ~~~~~~~~~~^
vtrunc_w_i32.c:43:13: warning: declaration of 'exp_result' shadows a parameter [-Wshadow]
   43 |     int32_t exp_result[16] = {0};
      |             ^~~~~~~~~~
vtrunc_w_i32.c:30:63: note: shadowed declaration is here
   30 | void vtrunc_w_i32_golden(int64_t a[2][8],uint32_t *b,int32_t *exp_result) {
      |                                                      ~~~~~~~~~^~~~~~~~~~
vtrunc_w_i32.c:52:14: error: too many arguments to function 'vtrunc_w_i32'
   52 |     result = vtrunc_w_i32(a,b);
      |              ^~~~~~~~~~~~
In file included from vtrunc_w_i32.c:4:
/opt/analog/riscv/1.0.1/Riscv/software/host/bin/gcc/lib/gcc/riscv32-rivai-elf/10.2.1/include/rivai_rugrats.h:2250:1: note: declared here
 2250 | __RUGRATS_TRUNCATE_OP (trunc, i, int, 32, 64, 16, 8)
      | ^~~~~~~~~~~~~~~~~~~~~
vtrunc_w_i32.c:57:64: warning: format '%x' expects argument of type 'unsigned int', but argument 5 has type 'int32_t' {aka 'long int'} [-Wformat=]
   57 |             printf("Failed: result[%d] = %x, exp_result[%d] = %x\n", i, result[i], i, exp_result[i]);
      |                                                               ~^                      ~~~~~~~~~~~~~
      |                                                                |                                |
      |                                                                unsigned int                     int32_t {aka long int}
      |                                                               %lx
vtrunc_w_i32.c: In function 'vtrunc_w_i32_golden':
vtrunc_w_i32.c:72:1: error: expected declaration or statement at end of input
   72 | }
      | ^
vtrunc_w_i32.c:30:34: warning: unused parameter 'a' [-Wunused-parameter]
   30 | void vtrunc_w_i32_golden(int64_t a[2][8],uint32_t *b,int32_t *exp_result) {
      |                          ~~~~~~~~^~~~~~~
vtrunc_w_i32.c:30:52: warning: unused parameter 'b' [-Wunused-parameter]
   30 | void vtrunc_w_i32_golden(int64_t a[2][8],uint32_t *b,int32_t *exp_result) {
      |                                          ~~~~~~~~~~^
vtrunc_w_i32.c:30:63: warning: unused parameter 'exp_result' [-Wunused-parameter]
   30 | void vtrunc_w_i32_golden(int64_t a[2][8],uint32_t *b,int32_t *exp_result) {
      |                                                      ~~~~~~~~~^~~~~~~~~~
At top level:
vtrunc_w_i32.c:35:5: warning: 'main' defined but not used [-Wunused-function]
   35 | int main(void) {
      |     ^~~~
make[1]: *** [/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vtrunc_w_i32.o] Error 1
make: *** [bare] Error 2
======================================================================

 target	:	deccription
****************************
 bare	:	build application on baremental case. param: type=app-type app=app-name

 rbb	:	run bare-app on beak. (build it firstly if modified) param: APP_TYPE=type APP_NAME=app-name , bp=beak-param

 clean		:	delete objects generated by make
****************************

/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/scripts/gorun.sh /home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test "make -j4 APP_TYPE=test APP_NAME=vtrunc_w_i32"
~/workspace/risc-v/rivai/riscv-intrinsic-testing/test ~/workspace/risc-v/rivai/riscv-intrinsic-testing
make[1]: Entering directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
    CC vtrunc_w_i32.c
Makefile:73: recipe for target '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vtrunc_w_i32.o' failed
make[1]: Leaving directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
Makefile:37: recipe for target 'bare' failed